--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ img {
   list-style: none;
 }
 
-/* header */
+/* Верхняя линия */
 
 .header .container {
   display: flex;
@@ -83,8 +83,6 @@ img {
 
 .site-nav {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .site-nav-item:not(:last-child) {
@@ -112,18 +110,31 @@ img {
   color: var(--secondary-text-color);
 }
 
-.site-nav .link.current {
-  color: var(--accent-color);
-}
-
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
 }
 
 .site-nav-list {
+  display: block;
+  position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+
+.current {
+  color: var(--accent-color);
+}
+
+.current::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  bottom: 0;
+  background: var(--accent-color);
 }
 
 .auth-nav {
