--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ img {
   color: var(--accent-color);
 }
 
-.site-nav .site-nav-list {
+.site-nav-list {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -195,7 +195,7 @@ img {
 .contacts-links {
   color: var(--primary-text-color);
 }
-/* Hero */
+/* Секция героя */
 
 .hero {
   text-align: center;
@@ -248,7 +248,8 @@ img {
   background-color: var(--secondary-accent-color);
 }
 
-/* Advantages */
+/* Преимущества*/
+
 .section .container {
   display: flex;
   padding-top: 94px;
@@ -295,7 +296,7 @@ img {
   color: var(--primary-text-color);
 }
 
-/*  Working*/
+/*  Чем мы занимаемся */
 
 .section .container {
   display: flex;
@@ -304,6 +305,10 @@ img {
 
 .working-list {
   display: flex;
+}
+
+.working-list .item {
+  position: relative;
 }
 
 .section-title {
@@ -316,6 +321,11 @@ img {
 }
 
 .working-list-item {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  left: 0px;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14px;
@@ -324,10 +334,10 @@ img {
   color: var(--primary-white-color);
   padding-top: 27px;
   padding-bottom: 27px;
-  background-color: var(--primary-bcg-color);
+  background: rgba(47, 48, 58, 0.8);
 }
 
-/* Our team */
+/* Наша команда */
 
 .team {
   background-color: var(--secondary-bcg-color);
@@ -365,7 +375,6 @@ img {
 
 .social-list {
   display: flex;
-  /* flex-wrap: wrap; */
   justify-content: center;
   padding-bottom: 24px;
 }
@@ -406,7 +415,7 @@ img {
   fill: var(--primary-white-color);
 }
 
-/* Clients */
+/* Клиенты */
 
 .client-list {
   display: flex;
@@ -445,7 +454,7 @@ img {
   fill: var(--socials-main-color);
 }
 
-/* footer */
+/* Подвал */
 
 .footer-section {
   background-color: var(--primary-bcg-color);
@@ -558,7 +567,7 @@ img {
   background-color: var(--accent-color);
 }
 
-/* Button-footer */
+/* Кнопка подвала */
 
 .subscribe {
   display: flex;
@@ -598,7 +607,7 @@ img {
   fill: var(--primary-white-color);
 }
 
-/* portfolio */
+/* Портфолио */
 
 .filtr-list {
   display: flex;
