--- a/css/style.css
+++ b/css/style.css
@@ -634,6 +634,7 @@ img {
 
 .button-filtr:hover,
 .button-filtr:focus {
+  cursor: pointer;
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -656,10 +657,37 @@ img {
   overflow: hidden;
 }
 
+.card-list-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
 .card-content {
   border: 1px solid #eeeeee;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+}
+
+.text-popup {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  padding: 24px 63px;
+  font-size: 18px;
+  line-height: 1.56;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--primary-background-color);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover .text-popup,
+.link:focus .text-popup {
+  transform: translateY(0%);
+  opacity: 1;
 }
 
 .card-list-number:nth-child(3n) {
