--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@ img {
   justify-content: space-between;
 }
 
+header {
+  background-color: var(--primary-white-color);
+  border-bottom: 1px solid #ececec;
+}
+
 .navigation {
   display: flex;
   align-items: center;
@@ -135,6 +140,7 @@ img {
   border-radius: 2px;
   bottom: 0;
   background: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-nav {
@@ -174,11 +180,13 @@ img {
 .icon-envelope {
   margin-right: 10px;
   fill: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-smartphone {
   margin-right: 10px;
   fill: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-list .contacts-links:focus,
