--- a/css/style.css
+++ b/css/style.css
@@ -643,6 +643,8 @@ header {
   color: var(--secondary-text-color);
   background: #f5f4fa;
   border: none;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-filtr:hover,
